@@ -294,6 +294,49 @@
 
     <profiles>
         <profile>
+            <id>jdk7</id>
+            <activation>
+                <jdk>1.7</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludedGroups>org.verdictdb.category.PrestoTests</excludedGroups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jdk8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>com.facebook.presto</groupId>
+                    <artifactId>presto-jdbc</artifactId>
+                    <version>0.212</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <!-- CircleCI build workaround -->
+                            <reuseForks>true</reuseForks>
+                            <useSystemClassLoader>false</useSystemClassLoader>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>JDK7-setting</id>
             <activation>
                 <jdk>1.7</jdk>
@@ -358,12 +401,9 @@
                             </systemProperties>
                             <!-- This fork mode seems to be only working configuration for JDK7 -->
                             <!-- <forkMode>always</forkMode> -->
-                            <!--<forkCount>1</forkCount>
+                            <forkCount>1</forkCount>
                             <reuseForks>false</reuseForks>
-                            <argLine>-Xmx2048m</argLine> -->
-                            <forkCount>3</forkCount>
-                            <reuseForks>true</reuseForks>
-                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            <argLine>-Xmx2048m</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
